@@ -29,6 +29,7 @@ Version 1.5.9+svn:
    * New merman village terrain variations
  * User interface:
    * Fixed an exception when certain characters weren't escaped
+   * Removed the gamma correction option (code is only disabled not removed)
  * WML Engine
    * [replace_map] changes the map completely, changing the map size is 
      posible - off-map units go into the recall list
